force-app/main/default/objects/Monthly_eNett_Service_Cloud_Snapshot__c/Monthly_eNett_Service_Cloud_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Monthly eNett Service Cloud Snapshot</label>
    <nameField>
        <displayFormat>MESC-{00000000}</displayFormat>
        <label>Monthly eNett Service Cloud Snapshot Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly eNett Service Cloud Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>