force-app/main/default/objects/Monthly_eNett_Service_Cloud_Snapshot__c/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <label>Account Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>