force-app/main/default/objects/Monthly_eNett_Service_Cloud_Snapshot__c/fields/Assignee_Region__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Region__c</fullName>
    <label>Assignee Region</label>
    <length>10</length>
    <type>Text</type>
</CustomField>