force-app/main/default/objects/Monthly_eNett_Service_Cloud_Snapshot__c/fields/Assignee_Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Service_Level__c</fullName>
    <label>Assignee Service Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>