force-app/main/default/objects/Monthly_eNett_Service_Cloud_Snapshot__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>