force-app/main/default/objects/Monthly_eNett_Service_Cloud_Snapshot__c/fields/Customer_Service_Priority__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Priority__c</fullName>
    <label>Customer Service Priority</label>
    <length>20</length>
    <type>Text</type>
</CustomField>