force-app/main/default/objects/Monthly_eNett_Service_Cloud_Snapshot__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>