force-app/main/default/objects/Monthly_eNett_Service_Cloud_Snapshot__c/fields/ECN__c.field-meta.xml
<CustomField>
    <fullName>ECN__c</fullName>
    <label>ECN</label>
    <length>6</length>
    <type>Text</type>
</CustomField>