force-app/main/default/objects/Monthly_eNett_Service_Cloud_Snapshot__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>Issue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>