force-app/main/default/objects/Monthly_eNett_Service_Cloud_Snapshot__c/fields/On_Behalf_Of_Account__c.field-meta.xml
<CustomField>
    <fullName>On_Behalf_Of_Account__c</fullName>
    <label>On Behalf Of Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>