force-app/main/default/objects/Monthly_eNett_Service_Cloud_Snapshot__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>