force-app/main/default/objects/Monthly_eNett_Service_Cloud_Snapshot__c/fields/Ticket_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Created_By__c</fullName>
    <label>Ticket Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>