force-app/main/default/objects/Monthly_eNett_Service_Cloud_Snapshot__c/fields/Time_With_Support__c.field-meta.xml
<CustomField>
    <fullName>Time_With_Support__c</fullName>
    <label>Time With Support</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>